# wizard

./: CMakeLists.txt  NOTES  README.md  parser.cpp
include/: CCPPLanguage.hpp  CParser.hpp  EPrimitiveType.hpp  ILanguage.hpp  IParser.hpp  SContext.hpp  SCustomType.hpp  SPrimitiveType.hpp  wizard.h
src/: CCPPLanguage.cpp  CParser.cpp
